--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A react pdf viewer",
   "main": "dist/index.js",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -13,6 +14,8 @@
     }
   },
   "scripts": {
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
     "build": "tsc"
   },
   "repository": {
@@ -29,10 +32,11 @@
     "url": "https://github.com/rrijvy/rx-pdf-viewer/issues"
   },
   "homepage": "https://github.com/rrijvy/rx-pdf-viewer#readme",
-  "peerDependencies": {
-    "react": "^18.3.1"
-  },
   "devDependencies": {
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "monent": "^0.0.2-security",
+    "pdfjs-dist": "^4.2.67"
   }
 }
