--- a/package.json
+++ b/package.json
@@ -1,42 +1,39 @@
 {
   "name": "rx-pdf-viewer",
-  "version": "1.0.0",
-  "description": "A react pdf viewer",
-  "main": "dist/index.js",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
+  "main": "dist/main.ts",
+  "types": "dist/main.d.ts",
   "files": [
     "dist"
   ],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    }
-  },
   "scripts": {
-    "clean": "rimraf dist",
-    "prebuild": "npm run clean",
-    "build": "tsc"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rrijvy/rx-pdf-viewer.git"
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
-  "keywords": [
-    "pdf",
-    "pdf-viewer"
-  ],
-  "author": "rrijvy",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rrijvy/rx-pdf-viewer/issues"
-  },
-  "homepage": "https://github.com/rrijvy/rx-pdf-viewer#readme",
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "vite-plugin-dts": "^3.9.1"
   },
   "dependencies": {
-    "monent": "^0.0.2-security",
+    "pdf-dist": "^1.0.0",
     "pdfjs-dist": "^4.2.67"
   }
 }
