--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "rx-pdf-viewer",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "main": "dist/main.ts",
   "types": "dist/main.d.ts",
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rrijvy/rx-pdf-viewer.git"
+  },
+  "homepage": "https://github.com/rrijvy/rx-pdf-viewer#readme",
+  "bugs": {
+    "url": "https://github.com/rrijvy/rx-pdf-viewer/issues"
+  },
   "scripts": {
+    "clean": "rimraf dist",
     "dev": "vite",
+    "prebuild": "npm run clean",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
