--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "rx-pdf-viewer",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "type": "module",
-  "main": "dist/main.ts",
-  "types": "dist/main.d.ts",
+  "main": "dist/rx-pdf-viewer.js",
+  "types": "dist/main.d.js",
   "files": [
     "dist"
   ],
