--- a/package.json
+++ b/package.json
@@ -1,47 +1,36 @@
 {
   "name": "rx-pdf-viewer",
-  "version": "1.0.4",
-  "type": "module",
-  "main": "dist/rx-pdf-viewer.js",
-  "types": "dist/main.d.js",
-  "files": [
-    "dist"
-  ],
+  "version": "1.0.5",
+  "description": "A react pdf viewer",
+  "scripts": {
+    "build": "rollup -c"
+  },
+  "author": "rrijvy",
+  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rrijvy/rx-pdf-viewer.git"
   },
-  "homepage": "https://github.com/rrijvy/rx-pdf-viewer#readme",
   "bugs": {
     "url": "https://github.com/rrijvy/rx-pdf-viewer/issues"
   },
-  "scripts": {
-    "clean": "rimraf dist",
-    "dev": "vite",
-    "prebuild": "npm run clean",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "homepage": "https://github.com/rrijvy/rx-pdf-viewer#readme",
+  "dependencies": {
+    "react": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-dts": "^3.9.1"
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/react": "^18.3.2",
+    "rollup": "^4.17.2",
+    "rollup-plugin-dts": "^6.1.0",
+    "typescript": "^5.4.5"
   },
-  "dependencies": {
-    "pdfjs-dist": "^3.11.174"
-  }
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts"
 }
