--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,12 @@
     "skipLibCheck": true,
 
     "jsx": "react-jsx",
-    "module": "NodeNext",
+    "module": "ESNext",
     "declaration": true,
     "declarationDir": "types",
     "sourceMap": true,
     "outDir": "dist",
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
     "emitDeclarationOnly": true,
     "rootDir": "src"
