--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "rx-pdf-viewer",
-  "version": "1.0.11",
+  "version": "1.0.22",
   "type": "module",
   "files": [
     "dist"
   ],
   "main": "./dist/rx-pdf-viewer.umd.cjs",
-  "module": "./dist/rx-pdf-viewer.js",
-  "types": "./dist/main.d.js",
+  "module": "./dist/rx-pdf-viewer.es.js",
+  "types": "./dist/types/main.d.js",
   "exports": {
     ".": {
-      "import": "./dist/rx-pdf-viewer.js",
-      "require": "./dist/rx-pdf-viewer.umd.cjs"
+      "import": "./dist/rx-pdf-viewer.es.js",
+      "require": "./dist/rx-pdf-viewer.umd.cjs",
+      "types": "./dist/types/main.d.ts"
     }
   },
   "repository": {
@@ -22,11 +23,17 @@
   "bugs": {
     "url": "https://github.com/rrijvy/rx-pdf-viewer/issues"
   },
+  "keywords": [
+    "pdf",
+    "pdf-viewer",
+    "react"
+  ],
   "scripts": {
     "clean": "rimraf dist",
-    "prebuild": "npm run clean",
+    "copy": "node cp.js",
+    "prebuild": "npm run clean && npm run copy",
     "build": "tsc --p ./tsconfig-build.json && vite build",
-    "dev": "vite",
+    "dev": "npm run copy && vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepublishOnly": "npm run build"
@@ -47,12 +54,13 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
-    "vite-plugin-dts": "^3.9.1"
-  },
-  "dependencies": {
-    "pdfjs-dist": "^3.11.174"
+    "vite-plugin-dts": "^3.9.1",
+    "vite-plugin-static-copy": "^1.0.5"
   },
   "sideEffects": [
     "**/*.css"
-  ]
+  ],
+  "dependencies": {
+    "pdfjs-dist": "^4.2.67"
+  }
 }
