--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "rx-pdf-viewer",
-  "version": "1.0.9",
+  "version": "1.0.20",
   "description": "A react pdf viewer",
-  "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
@@ -11,38 +10,63 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "copy": "node cp.js",
     "prebuild": "npm run clean",
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "dev": "rollup -c -w",
+    "test": "jest",
+    "lint": "eslint src"
   },
+  "author": "rrijvy",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rrijvy/rx-pdf-viewer.git"
   },
+  "keywords": [
+    "pdf",
+    "viewer",
+    "pdf-viewer",
+    "react-pdf-viewer"
+  ],
   "bugs": {
-    "url": "https://github.com/rrijvy/rx-pdf-viewer/issues"
+    "url": "https://github.com/MidoAhmed/rollup-react-library-starter/issues"
   },
-  "homepage": "https://github.com/rrijvy/rx-pdf-viewer#readme",
-  "dependencies": {
-    "pdfjs-dist": "^3.11.174"
-  },
+  "homepage": "https://MidoAhmed.github.io/rollup-react-library-starter",
   "peerDependencies": {
-    "react": "^18.3.1"
+    "antd": "^5.4.0",
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.24.1",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@types/react": "^18.3.2",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^9.1.3",
-    "rollup": "^4.17.2",
-    "rollup-plugin-dts": "^6.1.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11.1.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/react": "^18.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "babel-jest": "^29.5.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^4.4.1",
+    "rollup": "^3.20.2",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "^5.4.5"
+    "sass": "^1.61.0",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4"
   }
 }
