--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES2015",
+    "jsx": "react",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "sourceMap": true,
+    "outDir": "dist",
+    "declarationDir": "types",
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-
-    "jsx": "react-jsx",
-    "module": "ESNext",
-    "declaration": true,
-    "declarationDir": "types",
-    "sourceMap": true,
-    "outDir": "dist",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true,
-    "rootDir": "src"
-  },
-  "exclude": ["dist"]
+    "skipLibCheck": true
+  }
 }
