--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "rx-pdf-viewer",
-  "version": "1.0.20",
+  "version": "1.0.24",
   "description": "A react pdf viewer",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "clean": "rimraf dist",
@@ -14,7 +15,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "jest",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "esmBuild": "tsc --project tsconfig.json --outDir ./dist/esmmm"
   },
   "author": "rrijvy",
   "license": "MIT",
@@ -48,11 +50,20 @@
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.1.0",
     "@testing-library/react": "^14.0.0",
+    "@types/babel__generator": "^7.6.8",
+    "@types/babel__template": "^7.4.4",
+    "@types/estree": "^1.0.5",
+    "@types/istanbul-lib-coverage": "^2.0.6",
+    "@types/istanbul-lib-report": "^3.0.3",
     "@types/jest": "^29.5.0",
+    "@types/node": "^20.12.12",
+    "@types/prop-types": "^15.7.12",
     "@types/react": "^18.0.33",
+    "@types/yargs-parser": "^21.0.3",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-jest": "^29.5.0",
+    "canvas": "^2.11.2",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "identity-obj-proxy": "^3.0.0",
@@ -71,6 +82,6 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "pdfjs-dist": "^4.2.67"
+    "pdfjs-dist": "^3.11.174"
   }
 }
