--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "rx-pdf-viewer",
   "version": "1.0.0",
   "main": "./dist/index.js",
+  "types": "./dist/types/index.d.ts",
   "scripts": {
-    "build": "webpack",
+    "clean": "rimraf dist",
+    "build": "npm run clean && webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
